Update package organization

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -30,7 +30,7 @@
     -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>🐰 Hop Exchange</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
