--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -28,7 +28,10 @@
     <!--
       Fonts
     -->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
 
     <title>🐰 Hop Exchange</title>
   </head>
