--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -33,7 +33,7 @@
       rel="stylesheet"
     />
 
-    <title>🐰 Hop Exchange</title>
+    <title>Hop Exchange</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
