--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A protocol for sending tokens across rollups and their shared layer-1 network in a quick and trustless manner"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
