FE: Add keywords and crawler meta tags

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta http-equiv="content-language" content="en-us" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="A protocol for sending tokens across rollups and their shared layer-1 network in a quick and trustless manner"
     />
+    <meta
+      name="keywords"
+      content="hop exchange, hop protocol, defi, decentralized exchange, cross-domain exchange, ethereum l2 exchange, layer 2, arbitrum, optimism, ovm, rollups, optimistic rollups, zk rollups"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="googlebot" content="index,follow"/ >
+    <meta name="application-name" content="Hop" />
+    <link rel="canonical" href="https://hop.exchange" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
