FE: Add OpenGraph meta tags

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A protocol for sending tokens across rollups and their shared layer-1 network in a quick and trustless manner"
+      content="A protocol for sending tokens across rollups and their shared layer-1 network in a quick and trustless manner."
     />
     <meta
       name="keywords"
@@ -17,7 +17,20 @@
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow"/ >
     <meta name="application-name" content="Hop" />
-    <link rel="canonical" href="https://hop.exchange" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@HopProtocol" />
+    <meta name="twitter:creator" content="@HopProtocol" />
+    <meta property="og:url" content="https://hop.exchange/" />
+    <meta property="og:title" content="Hop Exchange" />
+    <meta
+      property="og:description"
+      content="A protocol for sending tokens across rollups and their shared layer-1 network in a quick and trustless manner."
+    />
+    <meta
+      property="og:image"
+      content="https://hop.exchange/images/hop_logo.png"
+    />
+    <link rel="canonical" href="https://hop.exchange/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
