FE: Add Content-Security-Policy meta tag

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -15,7 +15,7 @@
       content="hop exchange, hop protocol, defi, decentralized exchange, cross-domain exchange, ethereum l2 exchange, layer 2, arbitrum, optimism, ovm, rollups, optimistic rollups, zk rollups"
     />
     <meta name="robots" content="index,follow" />
-    <meta name="googlebot" content="index,follow"/ >
+    <meta name="googlebot" content="index,follow" />
     <meta name="application-name" content="Hop" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@HopProtocol" />
@@ -30,6 +30,7 @@
       property="og:image"
       content="https://hop.exchange/images/hop_logo.png"
     />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; child-src 'self' https://*.google.com https://*.gstatic.com blob:; script-src 'self' https://*.google.com https://*.gstatic.com https://*.google-analytics.com resource: blob:; connect-src 'self' https://*.google.com https://*.gstatic.com https://*.authereum.com wss://*.authereum.com https://*.google-analytics.com wss://*.blocknative.com wss://*.walletconnect.org wss://*.zksync.io/jsrpc-ws http://localhost:* ws://localhost:* https://*.infura.io https://*.tor.us https://*.alchemyapi.io https://*.etherscan.io https://api.rollbar.com http://127.0.0.1:21325; img-src * data: blob:; frame-src 'self' https://*.google.com https://*.gstatic.com http://localhost:* chrome-extension://kmendfapggjehodndflmmgagdbamhnfd/u2f-comms.html https://widget.portis.io https://x2.fortmatic.com https://app.tor.us https://connect.trezor.io; style-src * 'unsafe-inline'; font-src https://*.gstatic.com; object-src 'none'; form-action 'none'; manifest-src 'self'; base-uri 'none'; block-all-mixed-content;" />
     <link rel="canonical" href="https://hop.exchange/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
