Update sankey library

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Hop Dataviz</title>
     <script src="//d3js.org/d3.v3.min.js"></script>
-    <script src="//cdn.rawgit.com/newrelic-forks/d3-plugins-sankey/master/sankey.js"></script>
+    <!-- <script src="//cdn.rawgit.com/newrelic-forks/d3-plugins-sankey/master/sankey.js"></script> -->
     <script src="//cdn.rawgit.com/misoproject/d3.chart/master/d3.chart.min.js"></script>
-    <script src="//cdn.rawgit.com/q-m/d3.chart.sankey/master/d3.chart.sankey.min.js"></script>
+    <!-- <script src="//cdn.rawgit.com/q-m/d3.chart.sankey/master/d3.chart.sankey.min.js"></script> -->
+    <script src="../lib//sankey2.js"></script>
     <style>
       body {
         padding: 10px;
