--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -10,11 +10,11 @@
     <script src="../lib//sankey2.js"></script>
     <style>
       body {
-        padding: 10px;
         margin: auto;
         background: #151417;
         color: #fff;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        padding: 2rem 2rem 5rem 2rem;
       }
       #chart {
         height: 500px;
@@ -41,7 +41,7 @@
         text-align: center;
       }
       .header h1 {
-        font-size: 1.4rem;
+        font-size: 2rem;
       }
       .chartHeader {
         display: flex;
@@ -57,22 +57,73 @@
       details > summary::marker {
         display: none;
       }
+      table {
+        border-collapse: separate;
+        width: 100%;
+        background: #161a1ca8;
+        padding: 2rem;
+        border-radius: 10px;
+      }
+      thead {
+        text-align: left;
+      }
+      table a {
+        text-decoration: none;
+      }
+      table a:hover {
+        font-weight: bold;
+      }
+      table td {
+        padding-bottom: 0.2rem;
+      }
+      .polygon {
+        color: #8b57e1;
+      }
+      .xdai {
+        color: #46a4a1;
+      }
+      .ethereum {
+        color: #868dac;
+      }
+      .rainbow {
+        font-weight: bold;
+        font-style: italic;
+      }
+      .rainbow-animated {
+        background: linear-gradient(to right, #ff3399, #6666ff);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+        animation: rainbowAnimation 6s ease-in-out infinite;
+        background-size: 400% 100%;
+      }
+      .animation-delay {
+        animation-delay: 1.5s;
+      }
+      @keyframes rainbowAnimation {
+        0%,100% {
+            background-position: 0 0;
+        }
+        50% {
+            background-position: 100% 0;
+        }
+      }
     </style>
   </head>
   <body>
     <header class="header">
-      <h1>Hop transfers</h1>
+      <h1 class="rainbow rainbow-animated">Hop transfers</h1>
     </header>
     <div class="chartHeader">
       <label>Source</label>
-      <label class="arrow">→</label>
+      <label class="arrow rainbow rainbow-animated animation-delay">⟶</label>
       <label>Destination</label>
     </div>
     <div class="chartContainer">
       <div id="chart"></div>
     </div>
-    <details>
-      <summary>View transfers</summary>
+    <details open>
+      <summary>Hide/Show Transfers</summary>
       <div id="transfers">
       </div>
     </details>
