--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -76,6 +76,10 @@
       table td {
         padding-bottom: 0.2rem;
       }
+      .timestamp {
+        font-weight: normal;
+        color: #ffffff8a;
+      }
       .polygon {
         color: #8b57e1;
       }
@@ -127,6 +131,7 @@
       <div id="transfers">
       </div>
     </details>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.27.0/luxon.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
