--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -63,6 +63,7 @@
         background: #161a1ca8;
         padding: 2rem;
         border-radius: 10px;
+        min-width: 1000px;
       }
       thead {
         text-align: left;
@@ -76,9 +77,24 @@
       table td {
         padding-bottom: 0.2rem;
       }
+      table img {
+        display: inline-block;
+        width: 16px;
+        margin-right: 0.5rem;
+      }
       .timestamp {
         font-weight: normal;
         color: #ffffff8a;
+      }
+      .token,
+      .amount {
+        font-weight: normal;
+        color: #ffffffcc;
+      }
+      .transferId {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
       }
       .polygon {
         color: #8b57e1;
@@ -132,6 +148,8 @@
       </div>
     </details>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.27.0/luxon.min.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js" type="text/javascript">
+</script>
     <script src="main.js"></script>
   </body>
 </html>
