Show bonded status

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -91,6 +91,14 @@
         font-weight: normal;
         color: #ffffffcc;
       }
+      .bonded {
+      }
+      .bonded .yes {
+        color: #81ff81;
+      }
+      .bonded .no {
+        color: #ffc55a;
+      }
       .transferId {
         overflow: hidden;
         text-overflow: ellipsis;
