frontend: Import more font weights

--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -52,7 +52,7 @@
       Fonts
     -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
       rel="stylesheet"
     />
 
