--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -46,7 +46,7 @@
                 <td :class="x.sourceChainSlug">
                   <img :src="x.sourceChainImageUrl" :alt="x.sourceChainName">
                   {{ x.sourceChainName }}
-                  <span :style="x.gradient">⟶</span>
+                  <span style="small-arrow">⟶</span>
                 </td>
                 <td :class="x.destinationChainSlug">
                   <img :src="x.destinationChainImageUrl" :alt="x.destinationChainName">
@@ -79,9 +79,21 @@
             </tbody>
           </table>
         </div>
-        <div class="pagination">
-          <button v-if="hasPreviousPage" @click="previousPage()" class="paginationButton">previous page</button>
-          <button v-if="hasNextPage" @click="nextPage()" class="paginationButton">next page</button>
+        <div class="tableFooter">
+          <div>
+            <select class="perPageSelection" v-model="perPage" @change="setPerPage">
+              <option value="10">10</option>
+              <option value="50">50</option>
+              <option value="100">100</option>
+              <option value="500">500</option>
+              <option value="1000">1000</option>
+              <option value="10000">10,000</option>
+            </select>
+          </div>
+          <div class="pagination">
+            <button v-if="hasPreviousPage" @click="previousPage" class="paginationButton">previous page</button>
+            <button v-if="hasNextPage" @click="nextPage" class="paginationButton">next page</button>
+          </div>
         </div>
       </details>
     </div>
