--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -28,9 +28,27 @@
       </div>
       <details open>
         <summary>Hide/Show Transfers</summary>
-        <div class="pagination">
-          <button v-if="hasPreviousPage" @click="previousPage()" class="paginationButton">previous page</button>
-          <button v-if="hasNextPage" @click="nextPage()" class="paginationButton">next page</button>
+        <div>
+          <div class="tableHeader">
+            <div>
+              <select class="perPageSelection" v-model="perPage" @change="setPerPage">
+                <option value="5">5</option>
+                <option value="10">10</option>
+                <option value="25">25</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+                <option value="250">250</option>
+                <option value="500">500</option>
+                <option value="1000">1000</option>
+                <option value="2500">2500</option>
+                <option value="5000">5000</option>
+                <option value="10000">10,000</option>
+              </select>
+          </div>
+          <div class="pagination">
+            <button v-if="hasPreviousPage" @click="previousPage()" class="paginationButton">previous page</button>
+            <button v-if="hasNextPage" @click="nextPage()" class="paginationButton">next page</button>
+          </div>
         </div>
         <div id="transfers">
           <table>
@@ -69,9 +87,9 @@
                   </a>
                   <span v-if="!x.bondTxExplorerUrl && x.sourceChain !== 1" :class="`${x.bonded ? 'yes' : 'no'}`">
                     <img :src="x.destinationChainImageUrl" :alt="x.destinationChainName">
-                    Unbonded
+                    Pending
                   </span>
-                  <span v-if="x.sourceChain === 1">
+                  <span class="na" v-if="x.sourceChain === 1" title="Not Applicable">
                     N/A
                   </span>
                 </td>
@@ -82,11 +100,16 @@
         <div class="tableFooter">
           <div>
             <select class="perPageSelection" v-model="perPage" @change="setPerPage">
+              <option value="5">5</option>
               <option value="10">10</option>
+              <option value="25">25</option>
               <option value="50">50</option>
               <option value="100">100</option>
+              <option value="250">250</option>
               <option value="500">500</option>
               <option value="1000">1000</option>
+              <option value="2500">2500</option>
+              <option value="5000">5000</option>
               <option value="10000">10,000</option>
             </select>
           </div>
