--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -31,7 +31,7 @@
           </div>
         </details>
       </div>
-      <div id="tvl">
+      <div id="tvl" style="display:none">
         <details open>
           <summary>Total Value Locked (USD) ▾</summary>
           <div>
