--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8">
@@ -58,6 +57,11 @@
                 <option value="2500">2500</option>
                 <option value="5000">5000</option>
                 <option value="10000">10,000</option>
+              </select>
+              <select v-model="filterBonded" @change="setFilterBonded">
+                <option value="all">All</option>
+                <option value="pending">Pending</option>
+                <option value="bonded">Bonded</option>
               </select>
           </div>
           <div class="pagination">
