--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -59,9 +59,14 @@
                 <option value="10000">10,000</option>
               </select>
               <select v-model="filterBonded" @change="setFilterBonded">
-                <option value="all">All</option>
+                <option value="">All</option>
                 <option value="pending">Pending</option>
                 <option value="bonded">Bonded</option>
+              </select>
+              <select v-model="filterToken" @change="setFilterToken">
+                <option value="">All</option>
+                <option value="USDC">USDC</option>
+                <option value="USDT">USDT</option>
               </select>
           </div>
           <div class="pagination">
