Set up Optimism TheGraph queries

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -38,6 +38,7 @@
             <div class="ethereum">Ethereum: {{tvl.ethereum.formattedAmount}}</div>
             <div class="polygon">Polygon: {{tvl.polygon.formattedAmount}}</div>
             <div class="xdai">xDai: {{tvl.xdai.formattedAmount}}</div>
+            <div class="optimism">Optimism: {{tvl.optimism.formattedAmount}}</div>
           </div>
       </div>
       <details open>
@@ -67,6 +68,7 @@
                 <option value="ethereum">Ethereum</option>
                 <option value="polygon">Polygon</option>
                 <option value="xdai">xDai</option>
+                <option value="optimism">Optimism</option>
               </select>
             </div>
             <div>
@@ -76,6 +78,7 @@
                 <option value="ethereum">Ethereum</option>
                 <option value="polygon">Polygon</option>
                 <option value="xdai">xDai</option>
+                <option value="optimism">Optimism</option>
               </select>
             </div>
             <div>
