--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -44,6 +44,7 @@
             <div class="polygon">Polygon: {{tvl.polygon.formattedAmount}}</div>
             <div class="xdai">xDai: {{tvl.xdai.formattedAmount}}</div>
             <div class="optimism">Optimism: {{tvl.optimism.formattedAmount}}</div>
+            <div class="arbitrum">Arbitrum: {{tvl.arbitrum.formattedAmount}}</div>
           </div>
       </div>
       <details open>
@@ -74,6 +75,7 @@
                 <option value="polygon">Polygon</option>
                 <option value="xdai">xDai</option>
                 <option value="optimism">Optimism</option>
+                <option value="arbitrum">Arbitrum</option>
               </select>
             </div>
             <div>
@@ -84,6 +86,7 @@
                 <option value="polygon">Polygon</option>
                 <option value="xdai">xDai</option>
                 <option value="optimism">Optimism</option>
+                <option value="arbitrum">Arbitrum</option>
               </select>
             </div>
             <div>
