Update token assets

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -95,6 +95,8 @@
                 <option value="">All</option>
                 <option value="USDC">USDC</option>
                 <option value="USDT">USDT</option>
+                <option value="MATIC">MATIC</option>
+                <option value="ETH">ETH</option>
               </select>
             </div>
             <div>
