Add DAI to explorer

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -97,6 +97,7 @@
                 <option value="USDT">USDT</option>
                 <option value="MATIC">MATIC</option>
                 <option value="ETH">ETH</option>
+                <option value="DAI">DAI</option>
               </select>
             </div>
             <div>
