--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -36,7 +36,7 @@
           <label for="#amountSizeCheckbox">
             <input type="checkbox" id="amountSizeCheckbox" @change="enableChartAmountSize" />
             Amount size
-          <label>
+          <label for="#chartSelection">
             <div id="chartSelection">{{ chartSelection }}</div>
         </details>
       </div>
