--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -33,11 +33,11 @@
           <div class="chartContainer">
             <div id="chart"></div>
           </div>
-          <label for="#amountSizeCheckbox">
+          <label for="amountSizeCheckbox">
             <input type="checkbox" id="amountSizeCheckbox" @change="enableChartAmountSize" />
             Amount size
-          <label for="#chartSelection">
-            <div id="chartSelection">{{ chartSelection }}</div>
+          </label>
+          <div id="chartSelection">{{ chartSelection }}</div>
         </details>
       </div>
       <div id="tvl" style="display:none">
